[package]
name = "ue4-drg-modman"
version = "0.0.1"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15.3"
rusqlite = { version = "0.35.0", features = ["bundled"] }
dirs = "6.0.0"
chrono = "0.4"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
keyring = "3.6.2"